# tomoka-rs

./: .gitignore  .trigger  Cargo.toml  LICENSE  README.md  config.env  tmq_emo.json
assets/data/: default_config.toml  radio.json
bins/: Cargo.toml  fix.rs
db/: Cargo.toml
db/src/: lib.rs
discord/: Cargo.toml
discord/src/: cache.rs  commands.rs  config.rs  constants.rs  events.rs  framework.rs  global.rs  lib.rs  logger.rs  main.rs  setting.rs  storages.rs  traits.rs  types.rs  utils.rs
discord/src/commands/: administration.rs  corona.rs  game.rs  general.rs  guild_master.rs  image.rs  master.rs  music.rs  pokemon.rs  prelude.rs  rgb.rs  utility.rs
discord/src/commands/administration/: prune.rs
discord/src/commands/corona/: leaderboard.rs
discord/src/commands/game/: tetris.rs  tictactoe.rs  tmq.rs
discord/src/commands/general/: avatar.rs  choose.rs  info.rs  kanji.rs  love.rs  ping.rs  say.rs  time.rs  uptime.rs  urban.rs  weather.rs
discord/src/commands/guild_master/: find_sadkaede.rs  find_sauce.rs  logger.rs  prefix.rs  repeat_words.rs
discord/src/commands/guild_master/find_sadkaede/: add.rs  all.rs  disable.rs  disable_all.rs  enable.rs  info.rs  remove.rs  toggle.rs
discord/src/commands/guild_master/find_sauce/: add.rs  all.rs  disable.rs  disable_all.rs  enable.rs  info.rs  remove.rs  toggle.rs
discord/src/commands/guild_master/logger/: channel.rs  disable.rs  enable.rs  info.rs  toggle.rs
discord/src/commands/guild_master/prefix/: change.rs  clear.rs  info.rs
discord/src/commands/guild_master/repeat_words/: add.rs  disable.rs  enable.rs  info.rs  remove.rs  toggle.rs
discord/src/commands/image/: diancie.rs  flip.rs  rotate.rs  saucenao.rs
discord/src/commands/master/: clear_cache.rs  reload.rs  restart.rs  save_config.rs  say_in.rs  set_cache_size.rs  shutdown.rs  system_info.rs
discord/src/commands/music/: pause.rs  radio.rs  resume.rs  shuffle.rs  stop.rs
discord/src/commands/pokemon/: move.rs  nature.rs  pokedex.rs  strategy.rs
discord/src/commands/rgb/: add.rs  count.rs  evidence.rs  remove.rs
discord/src/commands/utility/: decode.rs  eh.rs  encode.rs  google.rs  nhentai.rs  remind_me.rs  reminder.rs  search.rs  search_image.rs  time.rs
discord/src/commands/utility/ehentai/: info.rs
discord/src/commands/utility/reminder/: list.rs  set.rs
discord/src/traits/: embedable.rs  paginator.rs
magic/: Cargo.toml
magic/src/: ancient_magic.rs  dark_magic.rs  image.rs  lib.rs  macros.rs  sauce.rs  traits.rs
nodejs/translate/: index.js  package.json
pokemon/: Cargo.toml
pokemon/src/: damage.rs  field.rs  lib.rs  move.rs  nature.rs  pokemon.rs  stats.rs  trainer.rs  types.rs  utils.rs
requester/: Cargo.toml
requester/src/: ehentai.rs  lib.rs  mazii.rs  osuapi.rs  pokeapi.rs  smogon.rs  urban.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: cache.rs  commands.rs  config.rs  events.rs  framework.rs  genshin.rs  global.rs  lib.rs  logger.rs  main.rs  storages.rs  traits.rs  tui.rs  types.rs  utils.rs
src/commands/: corona.rs  general.rs  guild_master.rs  music.rs  osu.rs  pokemon.rs  prelude.rs  rgb.rs  utility.rs
src/commands/administration/: prune.rs
src/commands/corona/: leaderboard.rs
src/commands/game/: tictactoe.rs  tmq.rs
src/commands/general/: avatar.rs  info.rs  invite.rs  kanji.rs  say.rs  uptime.rs  weather.rs
src/commands/guild_master/: find_sadkaede.rs
src/commands/guild_master/find_sadkaede/: add.rs  enable.rs  info.rs
src/commands/guild_master/find_sauce/: add.rs  info.rs  remove.rs
src/commands/guild_master/logger/: enable.rs
src/commands/guild_master/prefix/: info.rs
src/commands/guild_master/repeat_words/: disable.rs  enable.rs  info.rs  toggle.rs
src/commands/image/: diancie.rs  saucenao.rs
src/commands/master/: reload.rs  restart.rs  shutdown.rs
src/commands/music/: pause.rs
src/commands/osu/: match.rs  osu_match.rs
src/commands/pokemon/: ability.rs  nature.rs  pokedex.rs  strategy.rs
src/commands/rgb/: add.rs  add_member.rs  count.rs  evidence.rs  remove.rs  remove_member.rs
src/commands/utility/: corona.rs  decode.rs  ehentai.rs  exec.rs  genshin.rs  nhentai.rs  search.rs  search_image.rs  translate.rs
src/commands/utility/ehentai/: info.rs
src/commands/utility/reminder/: remove.rs  set.rs
src/traits/: channelext.rs  embedable.rs  paginator.rs
src/tui/: events.rs
