[package]
name = "tomoka_rs"
version = "0.1.0"
default-run = "tomoka_rs"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
async-fs = "1"
blocking = "1"
bytes = "1"
config = "0.10"
chrono = "0.4"
chrono-tz = "0.5"
colorful = "0.2"
dashmap = { version = "3", features = ["serde"] }
dotenv = "0.15"
eliza = "2"
fern = { version = "0.6", features = ["date-based"] }
futures = "0.3"
humantime = "2"
lazy_static = "1.3"
log = "0.4"
mp3-duration = "0.1"
rand = { version = "0.7", features = ["small_rng"] }
regex = "1"
scraper = "0.12"
serde = "1"
serde_json = "1"
smallstr = { version = "0.2", features = ["serde"] }
sys-info = "0.5"
tempdir = "0.3"
db = { path = "./db" }

[dependencies.pokemon_core]
git = "https://gitlab.com/tmokenc/pokemon_rs"
# path = "../pokemon_rs"

[dependencies.requester]
# git = "https://gitlab.com/tmokenc/tomoreq"
path = "../tomoreq"
package = "tomoreq"
features = ["extra", "scrapers", "reqwest_client"]

[dependencies.magic]
git = "https://gitlab.com/tmokenc/crappy-magic"
package = "crappy_magic"
features = ["full"]

[dependencies.tomo-serenity-ext]
# git = "https://gitlab.com/tmokenc/tomo-serenity-ext"
path = "../tomo-serenity-ext"

[dependencies.tokio]
version = "1"
features = ["sync", "signal", "rt", "rt-multi-thread", "io-util", "macros"]

[dependencies.serenity]
# git = "https://github.com/serenity-rs/serenity"
# branch = "current"
version = "0.10"
features = ["collector", "rustls_backend", "voice"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "current"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }

