[package]
name = "db"
version = "0.1.0"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
bincode = "1"
lazy_static = "1"
sled = { version = "0.32", features = ["compression"] }
log = "0.4"
# tokio = { version = "0.3", features = ["time"] }
tokio = { version = "0.2", features = ["time"] }