[package]
name = "tomoka_rs"
version = "0.1.0"
default-run = "tomoka_rs"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

[dependencies]
# http_req = "^0.5"
bytes = "0.5.3"
config = "0.10"
chrono = "0.4"
chrono-tz = "0.5"
colorful = "0.2"
dotenv = "0.15"
eliza = "2"
env_logger = "0.7"
# failure = "0.1"
lazy_static = "1.3"
log = "0.4"
regex = "1.1"
tempdir = "0.3"
serde = "1"
serde_json = "1"
sys-info = "0.5"
humantime = "1.3"
# mp3-duration = "0.1"
scraper = "0.11"
db = { path = "../db" }
requester = { path = "../requester" }
pokemon_core = { git = "https://gitlab.com/tmokenc/pokemon_rs" }
magic = { git = "https://gitlab.com/tmokenc/crappy-magic", package = "crappy_magic", features = ["full"] }
rand = { version = "0.7", features = ["small_rng"] }
# ctrlc = { version = "3.1", features = ["termination"] }
tokio = { version = "0.2", features = ["fs", "sync", "stream", "signal", "io-util", "rt-threaded"] }
dashmap = { version = "3", features = ["serde"] }
smallstr = { version = "0.2", features = ["serde"] }
# serenity = { version = "0.8", features = ["voice", "cache"] }
serenity = { git = "https://github.com/Lakelezz/serenity", branch = "await", features = ["collector", "rustls_backend"] }
futures = "0.3"
async-trait = "0.1"
