[package]
name = "magic"
version = "0.1.0"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dark_magic"]
full = [
    "image_magic",
    "dark_magic",
    "ancient_magic",
    "sauce_magic",
    "macro_magic",
    "trait_magic",
]
dark_magic = []
ancient_magic = ["libc"]
image_magic = ["image", "dominant_color"]
sauce_magic = ["reqwest", "tokio", "scraper"]
macro_magic = []
trait_magic = []

[dependencies]
bytesize = "1"


reqwest = { version = "0.10", optional = true }
tokio = { version = "0.2", optional = true }
scraper = { version = "0.11", optional = true }
libc = { version = "0.2", optional = true }
image = { version = "0.23", optional = true }
dominant_color = { version = "0.2", optional = true }
