[package]
name = "requester"
version = "0.1.0"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# default = ["reqwest"]
# reqwest = ["reqwest"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls", "blocking"] }
async-trait = "0.1.22"
serde = "1"
serde_json = "1"
