[package]
name = "server"
version = "0.1.0"
authors = ["tmokenc <tmokenc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.warp]
version = "0.2"

[dependencies.tokio]
version = "0.2"
features = []